--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
                                     Blog
                                 </a>
                             </li>
-                            <li class="nav-item dropdown">
+                            @* <li class="nav-item dropdown">
                                 <a class="nav-link btn fw-bold" id="navbarDropdown1" role="button">
                                     Help
                                 </a>
@@ -89,7 +89,7 @@
                                 <a class="nav-link btn fw-bold" id="navbarDropdown2" role="button" asp-action="Play" asp-controller="Home">
                                     Play
                                 </a>
-                            </li>
+                            </li> *@
                            
                         </ul>
 
@@ -137,7 +137,7 @@
                                 {
                                     <a class="nav-link d-flex" asp-controller="User" asp-action="Login">
                                         <img src="~/Image/avatar.jpeg" alt="Profile" class="rounded-circle" width="30" height="30">
-                                        <span class="align-content-center px-1">Login</span>
+                                        <span class="align-content-center px-1">Account</span>
                                     </a>
                                 }
                             </li>
