--- a/Project/Client/Views/User/Login.cshtml
+++ b/Project/Client/Views/User/Login.cshtml
@@ -26,19 +26,23 @@
             </div>
         }
         <form asp-action="Login">
-            <div class="login-input input-group">
-                <span class="input-group-text">
+            <div class="login-input input-group row">
+                
+                <span class="col-md-1 input-group-text">
                     <i class="bi bi-person"></i>
                 </span>
-                <input asp-for="UsernameOrEmail" type="text" class="form-control" placeholder="Username" >
-                <span asp-validation-for="@Model.UsernameOrEmail" class="text-danger"></span>
+                <div class="col-md-1"></div>
+                <input asp-for="UsernameOrEmail" type="text" class="col-md-10 form-control" placeholder="Username" >
+                <span asp-validation-for="@Model.UsernameOrEmail" class="col-md-12 ms-3 text-danger"></span>
             </div>
-            <div class="login-input input-group">
-                <span class="input-group-text">
+            <div class="login-input input-group row">
+                
+                <span class="col-md-1 input-group-text">
                     <i class="bi bi-lock"></i>
                 </span>
-                <input asp-for="Password" type="password" class="form-control" placeholder="Password" >
-                <span asp-validation-for="@Model.Password" class="text-danger"></span>
+                <div class="col-md-1"></div>
+                <input asp-for="Password" type="password" class="col-md-10 form-control" placeholder="Password" >
+                <span asp-validation-for="@Model.Password" class="col-md-12 ms-3  text-danger"></span>
             </div>
             <div class="d-flex justify-content-between mb-3">
                 <div class="form-check">
