--- a/Project/Client/wwwroot/css/site.css
+++ b/Project/Client/wwwroot/css/site.css
@@ -450,7 +450,7 @@ header {
 }
 
     .navbar-nav .nav-link:hover {
-        color: #fff ;  /* Màu chữ khi hover */
+        color: #028f68; /* Màu chữ khi hover */
     }
 
 /* Định dạng cho dropdown-menu */
