update annotation usermodel, fix register

--- a/Project/Client/Views/User/Register.cshtml
+++ b/Project/Client/Views/User/Register.cshtml
@@ -3,7 +3,19 @@
 }
 @using Client.Models.AuthenModel
 @model RegisterModel
+@if (TempData["success"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["success"]
+    </div>
+}
 
+@if (TempData["error"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["error"]
+    </div>
+}
 <div class="login-container" style="height:100vh;">
     <div class="login-box">
         <div class="login-logo">
