--- a/Project/Client/Views/User/ResetPassword.cshtml
+++ b/Project/Client/Views/User/ResetPassword.cshtml
@@ -21,7 +21,7 @@
             </div>
         }
 
-        @if (TempData["error"] != null)
+        else if (TempData["error"] != null)
         {
             <div class="alert alert-danger">
                 @TempData["error"]
