fix show avatar, displayname, phonenumber at infomation

--- a/Project/Client/Views/User/ResetPassword.cshtml
+++ b/Project/Client/Views/User/ResetPassword.cshtml
@@ -33,14 +33,14 @@
                 <span class="input-group-text">
                     <i class="bi bi-person"></i>
                 </span>
-                <input asp-for="@Model.NewPassword" type="text" class="form-control" placeholder="New password">
+                <input type="password" asp-for="@Model.NewPassword" type="text" class="form-control" placeholder="New password">
                 <span asp-validation-for="NewPassword" class="text-danger"></span>
             </div> 
             <div class="login-input input-group">
                 <span class="input-group-text">
                     <i class="bi bi-person"></i>
                 </span>
-                <input asp-for="@Model.ConfirmPassword" type="text" class="form-control" placeholder="Confirm password">
+                <input type="password" asp-for="@Model.ConfirmPassword" type="text" class="form-control" placeholder="Confirm password">
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <button type="submit" class="login-btn fw-bold">Continue</button>
