Update fix login register

--- a/Project/Client/Views/User/Login.cshtml
+++ b/Project/Client/Views/User/Login.cshtml
@@ -5,7 +5,7 @@
 @model LoginRequestModel
 
 
-<div class="login-container" style="height:100vh;">
+<div class="login-container" style="height:auto">
     <div class="login-box">
         
         <div class="login-logo">
