--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -240,7 +240,7 @@
 
             <div style="text-align: center; margin-top: 20px; border-top: 1px solid #444; padding-top: 20px;">
                 <p>© 2024 G4T Game Studio. All rights reserved.</p>
-                <img src="~/Image/Logo-remove.png" alt="Visa" width="50">
+                <img src="~/Image/logore.png" alt="Logo" width="50">
             </div>
         </footer>
 
