--- a/Project/Client/Views/User/Login.cshtml
+++ b/Project/Client/Views/User/Login.cshtml
@@ -5,7 +5,7 @@
 @model LoginRequestModel
 
 
-<div class="login-container" style="height:auto">
+<div class="login-container" style="min-height:100vh; max-height:auto">
     <div class="login-box">
         
         <div class="login-logo">
