--- a/Project/Client/Views/User/Register.cshtml
+++ b/Project/Client/Views/User/Register.cshtml
@@ -16,7 +16,7 @@
         @TempData["error"]
     </div>
 }
-<div class="login-container" style="height:auto;">
+<div class="login-container" style="min-height:100vh; max-height:auto">
     <div class="login-box">
         <div class="login-logo">
             <a asp-controller="Home" asp-action="Index"><img src="~/image/logo.png" alt="Logo" /></a>
