--- a/Project/Client/Views/User/PasswordSecurity.cshtml
+++ b/Project/Client/Views/User/PasswordSecurity.cshtml
@@ -51,14 +51,18 @@
                     </a>
                 </div>
                 <div class="custom-nav-item">
-                    <button>
-                        <i class="fas fa-info-circle"></i> Privacy
-                    </button>
+                    <a asp-controller="User" asp-action="UserDashboard">
+                        <button type="button">
+                            <i class="fas fa-heart"></i> User Dashboard
+                        </button>
+                    </a>
                 </div>
-                <div class="custom-nav-item">
-                    <button>
-                        <i class="fas fa-heart"></i> Order History
-                    </button>
+                <div class="custom-nav-item text-end">
+                    <a asp-controller="User" asp-action="Logout">
+                        <button type="button">
+                            <i class="fas fa-heart"></i> Logout
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
