--- a/Project/Client/Views/Shared/_LayoutNull.cshtml
+++ b/Project/Client/Views/Shared/_LayoutNull.cshtml
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.css" integrity="sha512-oe8OpYjBaDWPt2VmSFR+qYOdnTjeV9QPLJUeqZyprDEQvQLJ9C5PCFclxwNuvb/GQgQngdCXzKSFltuHD3eCxA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <style>
@@ -133,6 +134,19 @@
             .text-center a:hover {
                 color: #00d55e;
             }
+
+        .stat-card {
+            height: 200px; /* Giảm chiều cao thẻ chứa */
+        }
+
+            .stat-card h3 {
+                font-size: 1.5rem; /* Giảm kích thước chữ của số liệu */
+            }
+
+        canvas {
+            max-width: 100%;
+            max-height: 150px; /* Giảm chiều cao biểu đồ */
+        }
     </style>
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -141,6 +155,7 @@
     <div>
         <main role="main">
             @RenderBody()
+            <partial name="_Notificate">
         </main>
     </div>
     @await RenderSectionAsync("Scripts", required: false)
