--- a/Project/Client/Views/User/Register.cshtml
+++ b/Project/Client/Views/User/Register.cshtml
@@ -3,19 +3,6 @@
 }
 @using Client.Models.AuthenModel
 @model RegisterModel
-@if (TempData["success"] != null)
-{
-    <div class="alert alert-success">
-        @TempData["success"]
-    </div>
-}
-
-@if (TempData["error"] != null)
-{
-    <div class="alert alert-danger">
-        @TempData["error"]
-    </div>
-}
 <div class="login-container" style="height:100vh;">
     <div class="login-box">
         <div class="login-logo">
@@ -27,30 +14,30 @@
                 <span class="input-group-text">
                     <i class="bi bi-person"></i>
                 </span>
-                <input type="text" asp-for="@Model.Username" class="form-control" placeholder="Username" >
-                <span asp-validation-for="Username" class="text-danger"></span>
-            </div>
+                <input type="text" asp-for="@Model.Username" class="form-control" placeholder="Username">
+            </div>    
+            <span asp-validation-for="Username" class="text-danger"></span>
             <div class="login-input input-group">
                 <span class="input-group-text">
                     <i class="bi bi-envelope"></i>
                 </span>
-                <input type="text" asp-for="@Model.Email" class="form-control" placeholder="Email" >
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <input type="text" asp-for="@Model.Email" class="form-control" placeholder="Email">
             </div>
-            <div class="login-input input-group">
-                <span class="input-group-text">
-                    <i class="bi bi-lock"></i>
-                </span>
-                <input type="password" asp-for="@Model.Password" class="form-control" placeholder="Password" >
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
+            <span asp-validation-for="Email" class="text-danger"></span>
             <div class="login-input input-group">
                 <span class="input-group-text">
                     <i class="bi bi-shield-lock"></i>
                 </span>
-                <input type="password" asp-for="@Model.ConfirmPassword" class="form-control" placeholder="Confirm Password" >
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                <input type="password" asp-for="@Model.Password" class="form-control" placeholder="Password">
             </div>
+            <span asp-validation-for="Password" class="text-danger"></span>
+            <div class="login-input input-group">
+                <span class="input-group-text">
+                    <i class="bi bi-shield-lock"></i>
+                </span>
+                <input type="password" asp-for="@Model.ConfirmPassword" class="form-control" placeholder="Confirm Password">
+            </div>
+            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             <div class="d-flex justify-content-between mb-3">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="rememberMe">
