--- a/Project/Client/Views/Product/ProductDetail.cshtml
+++ b/Project/Client/Views/Product/ProductDetail.cshtml
@@ -251,7 +251,7 @@
                                 <div class="col">
                                     <strong>Price: </strong>
                                     <span style="padding-left: 5px;">
-                                        @(product.Price == 0 ? " Free" : product.Price.ToString("C"))
+                                        @(product.Price == 0 ? "Free" : string.Format("{0:N0} VNĐ", product.Price))
                                     </span>
                                 </div>
                             </div>
