View Reportmanager, UpdateReport, Update view Login

--- a/Project/Client/Views/Admin/AdminDashboard.cshtml
+++ b/Project/Client/Views/Admin/AdminDashboard.cshtml
@@ -152,7 +152,7 @@
                             </div>
                             <div class="mb-3 mx-2 mt-2">
                                 <label for="dateInput" class="form-label sr-only">Chọn ngày</label>
-                                <input type="date" class="form-control form-control-sm" id="dateInput" name="CreateAt" required>
+                                <input type="month" class="form-control form-control-sm" id="dateInput" name="CreateAt" required>
                             </div>
                             <button type="submit" class="btn btn-danger btn-sm">Submit</button>
                         </form>
