--- a/Project/Client/Views/Shared/_LayoutAdmin.cshtml
+++ b/Project/Client/Views/Shared/_LayoutAdmin.cshtml
@@ -123,6 +123,13 @@
                         </button>
                     </form>
                 </li>
+                <li class="nav-item m-2">
+                    <form asp-controller="Admin" asp-action="ReportManager" method="get">
+                        <button id="comment-manager-btn" class="nav-link text-start border-0 w-100">
+                            <span class="p-2 fs-6 fw-bold">Report Manager</span>
+                        </button>
+                    </form>
+                </li>
             </ul>
 
             <hr>
